--- a/src/thread/CMakeLists.txt
+++ b/src/thread/CMakeLists.txt
@@ -4,4 +4,6 @@ add_library(thread_impl thread.cpp)
 
 target_include_directories(thread_impl PUBLIC .)
 
+# Link pthread
+target_link_libraries(thread_impl pthread)
 target_link_libraries(thread_impl compiler_flags)
