--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,12 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(multithread_test thread_test.cpp)
+add_executable(concurrency_test thread_test.cpp)
 
-target_link_libraries(multithread_test multithread_impl compiler_flags)
+target_link_libraries(concurrency_test concurrency_impl compiler_flags)
 # Catch2
-target_link_libraries(multithread_test Catch2::Catch2WithMain)
+target_link_libraries(concurrency_test Catch2::Catch2WithMain)
 
 # Output to build dir
-set_target_properties(multithread_test 
+set_target_properties(concurrency_test 
     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
 )
