basic thread implementation
Related to #1

--- a/src/thread/CMakeLists.txt
+++ b/src/thread/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(thread_impl thread.cpp)
 
 target_include_directories(thread_impl PUBLIC .)
 
+target_link_libraries(thread_impl PUBLIC function_impl)
+
 # Link pthread
-target_link_libraries(thread_impl pthread)
-target_link_libraries(thread_impl compiler_flags)
+target_link_libraries(thread_impl PUBLIC pthread compiler_flags)
