--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,14 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(concurrency_test thread_test.cpp mutex_test.cpp)
+add_library(concurrency_test_suite OBJECT thread_test.cpp mutex_test.cpp condition_var_test.cpp)
+target_link_libraries(concurrency_test_suite Catch2::Catch2)
+target_link_libraries(concurrency_test_suite concurrency_impl compiler_flags)
 
-target_link_libraries(concurrency_test concurrency_impl compiler_flags)
+# Work around to create executable
+add_executable(concurrency_test $<TARGET_OBJECTS:concurrency_test_suite>)
+
 # Catch2
-target_link_libraries(concurrency_test Catch2::Catch2WithMain)
+target_link_libraries(concurrency_test concurrency_test_suite Catch2::Catch2WithMain)
 
 # Output to build dir
 set_target_properties(concurrency_test 
