added basic impl of condition variable wrapper
Related to #5

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(thread)
 add_subdirectory(mutex)
 add_subdirectory(condition_variable)
 add_subdirectory(function)
+add_subdirectory(util)
 
 add_library(concurrency_impl INTERFACE)
 
