--- a/src/function/CMakeLists.txt
+++ b/src/function/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(function_impl INTERFACE)
 
 target_include_directories(function_impl INTERFACE .)
 
-target_link_libraries(function_impl INTERFACE compiler_flags)
+target_link_libraries(function_impl INTERFACE Concurrency_compiler_flags)
