--- a/src/mutex/CMakeLists.txt
+++ b/src/mutex/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(mutex_impl mutex.cpp)
 target_include_directories(mutex_impl PUBLIC .)
 
 # Link pthread
-target_link_libraries(mutex_impl PUBLIC pthread compiler_flags)
+target_link_libraries(mutex_impl PUBLIC pthread Concurrency_compiler_flags)
