--- a/src/thread/CMakeLists.txt
+++ b/src/thread/CMakeLists.txt
@@ -7,4 +7,4 @@ target_include_directories(thread_impl PUBLIC .)
 target_link_libraries(thread_impl PUBLIC function_impl)
 
 # Link pthread
-target_link_libraries(thread_impl PUBLIC pthread compiler_flags)
+target_link_libraries(thread_impl PUBLIC pthread Concurrency_compiler_flags)
