--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(Multithread)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_library(compiler_flags INTERFACE)
-target_compile_features(compiler_flags INTERFACE cxx_std_11)
+add_library(Concurrency_compiler_flags INTERFACE)
+target_compile_features(Concurrency_compiler_flags INTERFACE cxx_std_11)
 
 # Include src folders
 add_subdirectory(src)
@@ -23,5 +23,5 @@ FetchContent_MakeAvailable(Catch2)
 
 add_executable(concurrency_app main.cpp)
 
-target_link_libraries(concurrency_app concurrency_impl compiler_flags)
+target_link_libraries(concurrency_app concurrency_impl Concurrency_compiler_flags)
 
