--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,4 +10,4 @@ add_library(concurrency_impl INTERFACE)
 
 target_link_libraries(concurrency_impl INTERFACE thread_impl mutex_impl condition_var_impl function_impl)
 
-target_link_libraries(concurrency_impl INTERFACE compiler_flags)
+target_link_libraries(concurrency_impl INTERFACE Concurrency_compiler_flags)
