--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(util_impl INTERFACE)
 target_include_directories(util_impl INTERFACE .)
 
 target_link_libraries(util_impl INTERFACE function_impl)
-target_link_libraries(util_impl INTERFACE compiler_flags)
+target_link_libraries(util_impl INTERFACE Concurrency_compiler_flags)
