adaptable module function

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,7 +1,11 @@
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(function EXCLUDE_FROM_ALL)
 
-add_library(module_function ALIAS function_impl)
+if(NOT TARGET function_impl)
+    add_subdirectory(function EXCLUDE_FROM_ALL)
+endif()
 
+if(NOT TARGET module_function)
+    add_library(module_function ALIAS function_impl)
+endif()
 
