remake of c retval wrapper
There is a clear need to optimize it by compile time as much as possible
as it weights just too much (function & string members are redundantly heavy)

Related to #10

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -4,5 +4,5 @@ add_library(util_impl INTERFACE)
 
 target_include_directories(util_impl INTERFACE .)
 
-target_link_libraries(util_impl INTERFACE function_impl)
+target_link_libraries(util_impl INTERFACE module_function)
 target_link_libraries(util_impl INTERFACE Concurrency_compiler_flags)
