replaces cerror_code with posix_error
Related to #10

--- a/src/condition_variable/CMakeLists.txt
+++ b/src/condition_variable/CMakeLists.txt
@@ -5,6 +5,6 @@ add_library(condition_var_impl condition_variable.cpp)
 target_include_directories(condition_var_impl PUBLIC .)
 
 # Link mutex
-target_link_libraries(condition_var_impl PUBLIC mutex_impl util_impl)
+target_link_libraries(condition_var_impl PUBLIC mutex_impl util_impl concurrency_common)
 # Link pthread
 target_link_libraries(condition_var_impl PUBLIC pthread Concurrency_compiler_flags)
