--- a/src/mutex/CMakeLists.txt
+++ b/src/mutex/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_library(mutex_impl mutex.cpp)
 
 target_include_directories(mutex_impl PUBLIC .)
-target_link_libraries(mutex_impl PUBLIC util_impl)
+target_link_libraries(mutex_impl PUBLIC util_impl concurrency_common)
 
 # Link pthread
 target_link_libraries(mutex_impl PUBLIC pthread Concurrency_compiler_flags)
