--- a/src/thread/CMakeLists.txt
+++ b/src/thread/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(thread_impl thread.cpp)
 
 target_include_directories(thread_impl PUBLIC .)
 
-target_link_libraries(thread_impl PUBLIC module_function util_impl)
+target_link_libraries(thread_impl PUBLIC module_function util_impl concurrency_common)
 
 # Link pthread
 target_link_libraries(thread_impl PUBLIC pthread Concurrency_compiler_flags)
